--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>bukkit</artifactId>
+      <!-- Bukkit API Version, change to match if out of sync -->
       <version>1.1-R4-SNAPSHOT</version>
       <scope>provided</scope>
     </dependency>
