--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
 
-  <groupId>sample.example.groupid</groupId>
+  <groupId>com.example.groupid</groupId>
   <artifactId>SampleBukkitPlugin</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <name>SampleBukkitPlugin</name>
