changed bukkit version to 1.2.4-R1.0 added to pom.xml the declaration to filter the resources folder changed plugin.yml to use a maven variable for version

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,7 +2,7 @@
 # For more infomration refer to http://wiki.bukkit.org/Plugin_YAML
 main: sample.example.groupid.SamplePlugin
 name: SamplePlugin
-version: 1.0.0
+version: ${project.version}
 author: SampleAuthor
 description: This is a sample plugin
 commands:
