--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
       <groupId>org.bukkit</groupId>
       <artifactId>bukkit</artifactId>
       <!-- Bukkit API Version, change to match if out of sync -->
-      <version>1.2.3-R0.2</version>
+      <version>1.2.4-R1.0</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
@@ -46,6 +46,12 @@
   </dependencies>
 
   <build>
+    <resources>
+      <resource>
+        <directory>${basedir}/src/main/resources</directory>
+        <filtering>true</filtering>
+      </resource>
+    </resources>
     <plugins>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
