--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
       <groupId>org.bukkit</groupId>
       <artifactId>bukkit</artifactId>
       <!-- Bukkit API Version, change to match if out of sync -->
-      <version>1.2.5-R1.2-SNAPSHOT</version>
+      <version>1.2.5-R1.2</version>
       <scope>provided</scope>
     </dependency>
     <dependency>
