--- a/pom.xml
+++ b/pom.xml
@@ -26,10 +26,12 @@
     <dependency>
       <groupId>org.bukkit</groupId>
       <artifactId>bukkit</artifactId>
-      <!-- Bukkit API Version, change to match if out of sync -->
-      <version>1.2.5-R1.3</version>
+      <!-- Bukkit API Version, change if out dated -->
+      <version>1.2.5-R2.0</version>
+      <type>jar</type>
       <scope>provided</scope>
     </dependency>
+    <!-- Following dependency is provided by CraftBukkit -->
     <dependency>
       <groupId>com.google.guava</groupId>
       <artifactId>guava</artifactId>
@@ -37,23 +39,26 @@
       <type>jar</type>
       <scope>provided</scope>
     </dependency>
+    <!-- Testing only, remove if not needed -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>4.10</version>
+      <type>jar</type>
       <scope>test</scope>
     </dependency>
   </dependencies>
 
   <build>
+    <!-- Filter *.yml files -->
     <resources>
-  <resource>
-    <directory>${basedir}/src/main/resources</directory>
-    <filtering>true</filtering>
-    <includes>
-      <include>**/*.yml</include>
-    </includes>
-  </resource>
+      <resource>
+        <directory>${basedir}/src/main/resources</directory>
+        <filtering>true</filtering>
+        <includes>
+          <include>**/*.yml</include>
+        </includes>
+      </resource>
     </resources>
     <plugins>
       <plugin>
@@ -61,6 +66,7 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>2.3.2</version>
         <configuration>
+          <!-- Minimum Minecraft requirement -->
           <source>1.5</source>
           <target>1.5</target>
         </configuration>
